# nope.gl

./: .gitignore  CHANGELOG.md  DEVELOPERS.md  Makefile  NOTICE  README.md  TODO  VERSION  api.c  bstr.c  bstr.h  codecov.yml  common.mak  configure.py  demo.c  deserialize.c  dot.c  gen-pyx.py  gen_specs.c  gl_utils.c  gl_utils.h  glcontext.c  glcontext.h  glcontext_cgl.c  glcontext_eagl.m  glcontext_egl.c  glcontext_wgl.c  glcontext_x11.c  glfunctions.h  glincludes.h  libnodegl.pc.tpl  libnodegl.ver  log.c  log.h  math_utils.c  math_utils.h  ngl-player.c  ngl-render.c  node_animkeyframe.c  node_attribute.c  (+37 more)
libnodegl/: .clangd  .gitignore  Makefile  android_ctx.c  android_ctx.h  android_handler.c  android_handler.h  android_handlerthread.c  android_handlerthread.h  android_imagereader.c  android_imagereader.h  android_looper.c  android_looper.h  android_surface.c  android_surface.h  android_utils.c  android_utils.h  animation.c  animation.h  api.c  asm_aarch64.S  backend.h  backend_gl.c  blending.c  blending.h  block.c  block.h  bstr.c  bstr.h  buffer.c  buffer.h  buffer_gl.c  buffer_gl.h  colorconv.c  colorconv.h  darray.c  darray.h  default_shaders.c  default_shaders.h  deserialize.c  (+227 more)
libnodegl/backends/gl/: api_gl.c  buffer_gl.c  buffer_gl.h  egl.h  feature_gl.h  format_gl.c  gctx_gl.c  gctx_gl.h  glcontext.c  glcontext.h  glcontext_eagl.m  glcontext_egl.c  glcontext_nsgl.m  glcontext_wgl.c  gldefinitions_data.h  glfeatures_data.h  glfunctions.h  glincludes.h  glstate.c  glstate.h  glwrappers.h  gpu_ctx_gl.c  gpu_ctx_gl.h  gtimer_gl.h  hwmap_mediacodec_gl.c  hwmap_vaapi_gl.c  hwmap_videotoolbox_darwin_gl.c  hwmap_videotoolbox_ios_gl.c  hwupload_gl.c  hwupload_mediacodec_gl.c  hwupload_vaapi_gl.c  hwupload_videotoolbox_darwin_gl.c  hwupload_videotoolbox_ios_gl.c  pipeline_gl.c  pipeline_gl.h  program_gl.c  program_gl.h  program_gl_utils.c  program_gl_utils.h  rendertarget_gl.c  (+7 more)
libnodegl/backends/vk/: buffer_vk.c  buffer_vk.h  command_vk.c  command_vk.h  format_vk.c  format_vk.h  glslang_utils.c  glslang_utils.h  gpu_ctx_vk.c  gpu_ctx_vk.h  hwmap_mediacodec_vk.c  hwmap_vaapi_vk.c  hwmap_videotoolbox_darwin_vk.m  hwmap_vk.c  pipeline_vk.c  pipeline_vk.h  program_vk.c  program_vk.h  rendertarget_vk.c  rendertarget_vk.h  texture_vk.c  texture_vk.h  vkcontext.c  vkcontext.h  vkutils.c  vkutils.h  (+2 more)
libnodegl/doc/: libnodegl.md
libnodegl/glsl/: filter_alpha.glsl  filter_contrast.glsl  filter_exposure.glsl  filter_inversealpha.glsl  filter_linear2srgb.glsl  filter_opacity.glsl  filter_premult.glsl  filter_saturation.glsl  filter_srgb2linear.glsl  hdr.glsl  hdr_hlg2sdr.frag  hdr_pq2sdr.frag  helper_linear2srgb.glsl  helper_misc_utils.glsl  helper_srgb2linear.glsl  source_color.frag  source_color.vert  source_gradient.frag  source_gradient.vert  source_gradient4.frag  source_texture.frag  source_texture.vert
libnodegl/scripts/: copyfile.py  gen-gl-wrappers.py  glsl2c.py
libnodegl/src/: android_imagereader.c  android_looper.c  api.c  asm_aarch64.S  blending.c  block.c  colorconv.c  deserialize.c  eval.c  gen_doc.c  gen_specs.c  geometry.c  hud.h  hwconv.c  hwmap.c  hwmap.h  hwmap_common.c  image.h  internal.h  jni_utils.c  node_animated.c  node_buffer.c  node_computeprogram.c  node_eval.c  node_geometry.c  node_identity.c  node_io.c  node_media.c  node_noise.c  node_path.c  node_quad.c  node_renderother.c  node_resourceprops.c  node_rtt.c  node_smoothpath.c  node_texture.c  node_textureview.c  node_timerangefilter.c  node_timerangemodes.c  node_transform.c  (+10 more)
libnopegl/: .clangd  meson.build  meson_options.txt  nodes.specs  nopegl.rc.in
libnopegl/doc/: libnopegl.md
libnopegl/scripts/: gen-doc.py  gen-gl-wrappers.py  glsl2c.py
libnopegl/src/: android_ctx.c  android_ctx.h  android_handler.c  android_handlerthread.h  android_imagereader.c  android_imagereader.h  android_looper.c  android_looper.h  android_surface.c  android_surface.h  android_utils.c  android_utils.h  animation.c  animation.h  api.c  atlas.c  atlas.h  bindgroup.c  bindgroup.h  blending.c  blending.h  block.c  block.h  box.h  bstr.c  bstr.h  buffer.c  buffer.h  buffer_layout.h  colorconv.c  darray.c  darray.h  deserialize.c  distmap.c  distmap.h  dot.c  drawutils.c  drawutils.h  eval.c  eval.h  (+184 more)
ngl-tools/: .clangd  .gitignore  Makefile  common.c  common.h  ipc.c  ipc.h  meson.build  meson_options.txt  ngl-desktop.c  ngl-ipc.c  ngl-player.c  ngl-probe.c  ngl-python.c  ngl-render.c  ngl-serialize.c  opts.c  opts.h  player.c  player.h  pthread_compat.h  python_utils.c  python_utils.h  wsi.c  wsi.h  wsi_cocoa.m  wsi_linux.c  wsi_windows.c  wsi_x11.c
tests/: .gitignore  Makefile  TODO  anim.mak  anim.py  api.mak  api.py  benchmark.py  blending.mak  blending.py  blur.py  color.py  compositing.py  compute.mak  compute.py  data.mak  data.py  depth_stencil.py  filter.py  live.mak  live.py  media.mak  media.py  meson.build  noise.py  path.py  py_bindings.py  rtt.mak  rtt.py  scope.py  serialize.py  shape.mak  shape.py  text.mak  text.py  texteffect.py  texture.mak  texture.py  transform.mak  transform.py  (+2 more)
tests/refs/: anim_derivative_api.ref  anim_forward_api.ref  anim_forward_float.ref  anim_forward_quat.ref  anim_forward_vec2.ref  anim_forward_vec3.ref  anim_forward_vec4.ref  anim_resolution_api.ref  anim_velocity_float.ref  anim_velocity_vec2.ref  anim_velocity_vec3.ref  anim_velocity_vec4.ref  benchmark_fingerprint_with_compute.ref  benchmark_fingerprint_without_compute.ref  benchmark_resources_with_compute.ref  benchmark_resources_without_compute.ref  blending_all_diamond.ref  blending_all_timed_diamond.ref  blending_darken.ref  blending_lighten.ref  blending_multiply.ref  blending_none.ref  blending_screen.ref  blur_fast_gaussian.ref  blur_gaussian.ref  blur_hexagonal.ref  blur_hexagonal_with_map.ref  blur_radial_zoom.ref  color_anim_hsl.ref  color_anim_hsv.ref  color_anim_srgb.ref  color_negative_values_srgb.ref  color_static_hsl.ref  color_static_hsv.ref  compositing_dst_atop.ref  compositing_dst_in.ref  compositing_dst_out.ref  compositing_dst_over.ref  compositing_src_atop.ref  compositing_src_in.ref  (+206 more)
(+695 files in other folders)
